Page : display Warning title in red

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -268,6 +268,10 @@ img {
   top: 220px;
 }
 
+.alert h6 {
+  color: red;
+}
+
 /*******************************************************************************
 Full-Width Styles
 *******************************************************************************/
