Page : fix css for main content div

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -282,7 +282,7 @@ Full-Width Styles
 
 .inner {
   position: relative;
-  max-width: 640px;
+  max-width: 900px;
   padding: 20px 10px;
   margin: 0 auto;
 }
@@ -374,6 +374,9 @@ Full-Width Styles
   background: #f2f2f2;
   border-top: 1px solid #111;
   border-bottom: 1px solid #111;
+  position: absolute;
+  width: 950px;
+  left: 300px;
 }
 
 #main_content {
